@@ -28,7 +28,8 @@ public class RefrigeratorIngredientRepository {
     private static RefrigeratorIngredientRepository refrigeratorIngredientRepository;
 
     private RefrigeratorIngredientRepository(Context context) {
-        this.refrigeratorIngredientDAO = FridgeDatabase.getInstance(context).refrigeratorDAO();
+        // 确保使用 refrigeratorIngredientDAO 方法
+        this.refrigeratorIngredientDAO = FridgeDatabase.getInstance(context).refrigeratorIngredientDAO();
         this.shoppingListIngredientRepository = ShoppingListIngredientRepository.getInstance(context);
     }
 
@@ -40,18 +41,24 @@ public class RefrigeratorIngredientRepository {
     }
 
     public void buyIngredients(List<RefrigeratorIngredient> ingredients) {
-
-        ingredients.forEach(refrigeratorIngredientDAO::insertIngredient);
+        ingredients.forEach(ingredient -> {
+            Optional<RefrigeratorIngredient> ingredientByName = Optional.ofNullable(refrigeratorIngredientDAO.getIngredientByName(ingredient.name, ingredient.purchaseDate, ingredient.expiration));
+            ingredientByName.ifPresentOrElse(o -> {
+                        o.setQuantity(o.quantity + ingredient.quantity);
+                        refrigeratorIngredientDAO.updateRefrigeratorIngredientQuantity(o);
+                    },
+                    () -> refrigeratorIngredientDAO.insertIngredient(ingredient));
+        });
 
         List<Ingredient> collect = ingredients.stream().
                 map(o -> (Ingredient) o)
-                .toList();
+                .collect(Collectors.toList());
 
         shoppingListIngredientRepository.check(collect);
     }
 
-    private String fetchGroupKey(RefrigeratorIngredient ingredient){
-        return ingredient.name +"#"+ ingredient.expiration;
+    private String fetchGroupKey(RefrigeratorIngredient ingredient) {
+        return ingredient.name + "#" + ingredient.expiration;
     }
 
     private @NonNull Map<String, Ingredient> computeIsUnfinished(Map<String, Ingredient> collect) {
@@ -100,11 +107,15 @@ public class RefrigeratorIngredientRepository {
         refrigeratorIngredientDAO.insertIngredient(ingredient);
     }
 
-    public List<RefrigeratorIngredientDetailVO> searchRefrigeratorIngredientDetail(RefrigeratorIngredientVO refrigeratorIngredientVO) {
+    public List<RefrigeratorIngredient> searchRefrigeratorIngredientDetail(RefrigeratorIngredientVO refrigeratorIngredientVO) {
         LocalDate now = LocalDate.now();
         String format = DateTimeFormatter.BASIC_ISO_DATE.format(now);
         int today = Integer.parseInt(format);
-        return refrigeratorIngredientDAO.getIngredientByName(refrigeratorIngredientVO.name, today);
+        List<RefrigeratorIngredient> ingredientByName = refrigeratorIngredientDAO.getIngredientsByName(refrigeratorIngredientVO.name, today);
+        ingredientByName.forEach(ingredient -> {
+            ingredient.setDaysRemaining(ingredient.expiration - today);
+        });
+        return ingredientByName;
     }
 
     public List<RefrigeratorIngredient> getRefrigeratorIngredients() {
@@ -126,12 +137,12 @@ public class RefrigeratorIngredientRepository {
         List<RefrigeratorIngredientVO> refrigeratorIngredients = refrigeratorIngredientDAO.getQuantityGreaterZeroAndNotExpiredIngredientsOverallInfo(today);
         Map<String, RefrigeratorIngredientVO> refrigeratorIngredientSortedByName = refrigeratorIngredients.stream()
                 .collect(Collectors.toMap(RefrigeratorIngredientVO::getName, o -> o));
-        for (RecipeIngredient  ingredient:
+        for (RecipeIngredient ingredient :
                 ingredients) {
             Optional<RefrigeratorIngredientVO> ingredientVO = Optional.ofNullable(refrigeratorIngredientSortedByName.get(ingredient.name));
             ingredientVO.ifPresentOrElse(ingredientVO1 -> {
                 if (ingredientVO1.sumQuantity < ingredient.quantity) {
-                     areIngredientsSufficient.set(false);
+                    areIngredientsSufficient.set(false);
                 }
             }, () -> areIngredientsSufficient.set(false));
         }
@@ -145,5 +156,16 @@ public class RefrigeratorIngredientRepository {
         return refrigeratorIngredientDAO.getQuantityGreaterZeroAndNotExpiredIngredientsOverallInfo(today)
                 .stream()
                 .collect(Collectors.toMap(RefrigeratorIngredientVO::getName, o -> o));
+    }
+
+    public List<RefrigeratorIngredientDetailVO> getRefrigeratorExpiringIngredients() {
+        LocalDate now = LocalDate.now();
+        String format = DateTimeFormatter.BASIC_ISO_DATE.format(now);
+        int today = Integer.parseInt(format);
+        return refrigeratorIngredientDAO.getExpirationDaysLesserThanThreeDaysIngredients(today);
+    }
+
+    public void editIngredientQuantity(RefrigeratorIngredient refrigeratorIngredient) {
+        refrigeratorIngredientDAO.updateRefrigeratorIngredientQuantity(refrigeratorIngredient);
     }
 }
